передаю в email-input splitId

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -122,6 +122,7 @@ mixin footer(options = {})
                 +textContent({ title: subTitleText, text: subtext })
                 +input({
                   isButtonSplit: true,
+                  splitId: "footer-email-split-id",
                   iconSrc: "arrow-forward.svg",
                   type: "email",
                   placeholder: emailInputPlaceholder,
