добавил -total- для id контейнера дейтпикера

--- a/src/components/total-card/total-card.pug
+++ b/src/components/total-card/total-card.pug
@@ -39,7 +39,7 @@ mixin totalCard(options = {})
             placeholder: departureInputPlaceholder,
             isDarkPlaceholder: true
           })
-          div(id="date-picker-container" class="date-picker-container")
+          div(id="date-picker-total-container" class="date-picker-container")
         +input({
           id: "number-total-guests-input",
           isFakeInput: true,
