--- a/src/components/checkbox/checkbox.pug
+++ b/src/components/checkbox/checkbox.pug
@@ -3,9 +3,9 @@ mixin checkbox(options = {})
     let labelClass = "checbox__lbl";
     let titleClass = "checkbox__title";
     let checkboxClass = "checkbox";
-    const listId = options.idExpandableList
-      ? options.idExpandableList
-      : "no-expandable-id";
+    const listId = options.listId
+      ? options.listId
+      : "id-checkbox-list";
 
     if (options.isExpandable) {
       titleClass += "  checkbox__title--expandable";
