--- a/src/components/checkbox/checkbox.pug
+++ b/src/components/checkbox/checkbox.pug
@@ -34,4 +34,4 @@ mixin checkbox(options = {})
             input(id=item.id type="checkbox" checked=item.isChecked)
             label(for=item.id class=labelClass)= item.title
               if options.isRich
-                p.checkbox__descr= item.descr
+                span.checkbox__descr= item.descr
