--- a/src/components/drop-down/drop-down.scss
+++ b/src/components/drop-down/drop-down.scss
@@ -146,6 +146,11 @@
       color: transparentize($contentColor, 0.5);
     }
   }
+
+  &--hide {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
 .drop-down-container {
