--- a/src/components/likebtn/likebtn.scss
+++ b/src/components/likebtn/likebtn.scss
@@ -3,7 +3,7 @@
   margin-bottom: 16px;
   font-size: 12px;
   line-height: 15px;
-  font-family: "Montserrat", "Arial", sans-serif;
+  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
   font-style: normal;
   font-weight: bold;
   text-transform: uppercase;
@@ -30,7 +30,7 @@
   padding-left: 7px;
   content: "";
   color: transparentize($contentColor, 0.55);
-  font-family: "Montserrat", "Quicksand", sans-serif;
+  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
   font-weight: normal;
   font-size: 10px;
   line-height: 12px;
