--- a/src/components/hotel-card/hotel-card.scss
+++ b/src/components/hotel-card/hotel-card.scss
@@ -144,13 +144,13 @@
 }
 
 .hotel-card__text {
-  font-family: Montserrat;
+  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
   margin: 0;
   font-size: 12px;
   color: transparentize($contentColor, 0.5);
 
   b {
-    font-family: Montserrat;
+    font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
     font-size: 14px;
   }
 }
