привел font-family к одному стилю

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -5,7 +5,7 @@
 body {
   color: $contentColor;
   font-size: 14px;
-  font-family: $fontFamily;
+  font-family: "Quicksand", "Montserrat", "Arial", sans-serif;
 }
 
 .container {
