--- a/src/page/not-found/not-found.scss
+++ b/src/page/not-found/not-found.scss
@@ -14,6 +14,7 @@
   background-image: url('./unicorn-r.svg'), url('./unicorn-l.svg');
   background-repeat: no-repeat;
   background-position: right center, left center;
+  background-size: 28%;
 }
 
 .not-found__wrap {
