исправил фиксированную ширину и высоту

--- a/src/components/likebtn/likebtn.scss
+++ b/src/components/likebtn/likebtn.scss
@@ -23,8 +23,8 @@
 .likebtn__item button {
   box-sizing: border-box;
   position: relative;
-  width: 40px;
-  height: 20px;
+  min-width: 40px;
+  min-height: 20px;
   margin: 0;
   padding: 0;
   padding-left: 7px;
