переделал separator для динамического контента

--- a/src/components/total-card/total-card.pug
+++ b/src/components/total-card/total-card.pug
@@ -62,5 +62,6 @@ mixin totalCard(options = {})
             p.total-card__calc-text 300₽
         .total-card__total
           p.total-card__total-text Итого
+          .total-card__total-separator
           p.total-card__total-price 38 081₽
         +button({ title: "Забронировать", isHaveIcon: true, buttonType: "submit" })
