--- a/src/components/likebtn/likebtn.scss
+++ b/src/components/likebtn/likebtn.scss
@@ -26,8 +26,9 @@
   min-width: 40px;
   min-height: 20px;
   margin: 0;
-  padding: 0;
-  padding-left: 7px;
+  padding: 3px 0;
+  padding-left: 20px;
+  padding-right: 12px;
   content: "";
   color: transparentize($contentColor, 0.55);
   font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
@@ -43,7 +44,7 @@
   position: absolute;
   content: "";
   top: 5px;
-  left: 3px;
+  left: 5px;
   width: 10px;
   height: 8px;
   background: url("../../components/likebtn/like.png") no-repeat;
