добавил страницам keywords

--- a/src/page/auth/auth.pug
+++ b/src/page/auth/auth.pug
@@ -5,6 +5,7 @@ block variables
   -
     const title = "Toxin - авторизация!";
     const description = "Toxin authorization";
+    const keywords = "Toxin keywords";
     const pageClass = "auth-page";
   
 block content
