--- a/src/page/main/main.pug
+++ b/src/page/main/main.pug
@@ -5,6 +5,7 @@ block variables
   -
     const title = "Toxin - главная!";
     const description = "Toxin description";
+    const keywords = "Toxin keywords"
     const pageClass = "index-page";
   
 block content
