--- a/src/page/registration/registration.pug
+++ b/src/page/registration/registration.pug
@@ -5,6 +5,7 @@ block variables
   -
     const title = "Toxin - регистрация!";
     const description = "Toxin registration";
+    const keywords = "Toxin keywords";
     const pageClass = "registration-page";
 
 block content
