--- a/src/page/room-details/room-details.pug
+++ b/src/page/room-details/room-details.pug
@@ -9,6 +9,7 @@ block variables
   -
     const title = "Toxin - детали комнаты!";
     const description = "Room details description";
+    const keywords = "Toxin keywords";
     const pageClass = "room-details";
     const footerBorderTop = true;
 
