--- a/src/page/rooms/rooms.pug
+++ b/src/page/rooms/rooms.pug
@@ -9,6 +9,7 @@ block variables
   -
     const title = "Toxin - подбери свой отель!";
     const description = "Toxin description";
+    const keywords = "Toxin keywords";
     const pageClass = "rooms-page";
     const footerBorderTop = true;
 
