--- a/src/page/not-found/not-found.pug
+++ b/src/page/not-found/not-found.pug
@@ -3,6 +3,7 @@ block variables
   -
     const title = "Toxin - страница не найдена!";
     const description = "page not found";
+    const keywords = "Toxin keywords";
     const pageClass = "not-found-page";
     const footerBorderTop = true;
 
@@ -11,7 +12,7 @@ block content
     section.not-found
       .not-found__wrap
         h1.not-found__title Ой!
-        p.not-found__descr Похоже, мы не можем найти <br/> нужную вам страницу.
+        p.not-found__descr Похоже, мы не можем найти нужную вам страницу.
         p.not-found__status Код ошибки: 404
         ul.not-found__help-links
           li(class="not-found__help-item") Вот несолько полезных ссылок:
