переношу строку без br

--- a/src/page/not-found/not-found.scss
+++ b/src/page/not-found/not-found.scss
@@ -29,7 +29,8 @@
 }
 
 .not-found__descr {
-  margin: 0;
+  max-width: 480px;
+  margin: 0 auto;
   margin-bottom: 20px;
   font-size: 24px;
   font-weight: bold;
