добавил meta теги для UI kit

--- a/src/page/cards/cards.pug
+++ b/src/page/cards/cards.pug
@@ -8,6 +8,8 @@ include ../../components/hotel-card/hotel-card
 block variables
   -
     const title = "Toxin - карточки";
+    const description = "Toxin description";
+    const keywords = "Toxin keywords";
     const pageClass = "cards-page";
 
 block content
