--- a/src/page/colors-and-type/colors-and-type.pug
+++ b/src/page/colors-and-type/colors-and-type.pug
@@ -5,6 +5,8 @@ include ../../components/typograph/typograph
 block variables
   -
     const title = "Toxin - типографика!";
+    const description = "Toxin description";
+    const keywords = "Toxin keywords";
     const pageClass = "colors-and-type";
 
 block content
