--- a/src/page/form-elements/form-elements.pug
+++ b/src/page/form-elements/form-elements.pug
@@ -16,7 +16,10 @@ include ../../components/comment/comment
 block variables
   -
     const title = "Toxin - элементы форм";
+    const description = "Toxin description";
+    const keywords = "Toxin keywords";
     const pageClass = "form-elements";
+
 
 block content
   .container
