--- a/src/layout/ui-kit.pug
+++ b/src/layout/ui-kit.pug
@@ -7,6 +7,8 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    meta(name="description", content=description)
+    meta(name="keywords" content=keywords)
     title #{title}
   body(class=pageClass)
     +logo({ isBig: true })
