--- a/src/page/headers-and-footers/headers-and-footers.pug
+++ b/src/page/headers-and-footers/headers-and-footers.pug
@@ -8,6 +8,8 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible" content="ie=edge")
+    meta(name="description", content="descr")
+    meta(name="keywords" content="kws")
     title Toxin - шапки и подвалы!
   body(class="headers-and-footers")
     +logo({ isBig: true })
