--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -4,42 +4,42 @@ include ../main-menu/main-menu
 
 -
   const menuItems = [
-    { id: "aboutUsRus", title: "О нас", path: "#" },
+    { id: "aboutUsRus", title: "О нас", path: "/404.html" },
     { 
       id: "productsRus",
       title: "Услуги",
-      path: "#",
+      path: "/404.html",
       subMenu: [
-        { id: "selectHotels", title: "Подбор отелей", path: "#" },
-        { id: "orderTransfer", title: "Заказать трансфер", path: "#" },
-        { id: "hotelsRating", title: "Рейтинг отелей", path: "#" }
+        { id: "selectHotels", title: "Подбор отелей", path: "/404.html" },
+        { id: "orderTransfer", title: "Заказать трансфер", path: "/404.html" },
+        { id: "hotelsRating", title: "Рейтинг отелей", path: "/404.html" }
       ]
     },
-    { id: "careersRus", title: "Вакансии", path: "#" },
-    { id: "newsRus", title: "Новости", path: "#" },
+    { id: "careersRus", title: "Вакансии", path: "/404.html" },
+    { id: "newsRus", title: "Новости", path: "/404.html" },
     {
       id: "documentationRus",
       title: "Соглашения",
-      path: "#",
+      path: "/404.html",
       subMenu: [
-        { id: "userDoc", title: "Пользовательские", path: "#" },
-        { id: "internationalDoc", title: "Международные", path: "#" }
+        { id: "userDoc", title: "Пользовательские", path: "/404.html" },
+        { id: "internationalDoc", title: "Международные", path: "/404.html" }
       ]
     }
   ];
 
   const menuEngItems = [
-    { id: "homeEng", title: "Home", path: "#" },
-    { id: "aboutUsEng", title: "About us", path: "#" },
+    { id: "homeEng", title: "Home", path: "/404.html" },
+    { id: "aboutUsEng", title: "About us", path: "/404.html" },
     {
       id: "servicesEng",
       title: "Services",
-      path: "#",
-      subMenu: [{ id: "servicesSubEng", title: "service", path: "#"}]
+      path: "/404.html",
+      subMenu: [{ id: "servicesSubEng", title: "service", path: "/404.html"}]
     },
-    { id: "careersEng", title: "Careers", path: "#" },
-    { id: "newsEng", title: "News", path: "#" },
-    { id: "documentationEng", title: "Documentation", path: "#" }
+    { id: "careersEng", title: "Careers", path: "/404.html" },
+    { id: "newsEng", title: "News", path: "/404.html" },
+    { id: "documentationEng", title: "Documentation", path: "/404.html" }
   ];
 
 mixin header(options = {})
