--- a/src/components/pagination/pagination.pug
+++ b/src/components/pagination/pagination.pug
@@ -5,17 +5,17 @@ mixin pagination(options = {})
         p.pagination__title= options.title
       ul.pagination__pages
         li(class="pagination__page-item  pagination__page-item--active")
-          a(href="#") 1
+          a(href="/404.html") 1
         li.pagination__page-item
-          a(href="#") 2
+          a(href="/404.html") 2
         li.pagination__page-item
-          a(href="#") 3
+          a(href="/404.html") 3
         li.pagination__page-item
-          a(href="#") ...
+          a(href="/404.html") ...
         li.pagination__page-item
-          a(href="#") 15
+          a(href="/404.html") 15
         li(class="pagination__page-item  pagination__page-next")
-          a(href="#") Далее
+          a(href="/404.html") Далее
       .pagination__overview
         p 1 – 12 из 100+ вариантов аренды
 
