--- a/src/components/total-card/total-card.pug
+++ b/src/components/total-card/total-card.pug
@@ -12,7 +12,7 @@ mixin totalCard(options = {})
 
   section.total-card
     .total-card__wrap
-      form()
+      form(action="/404.html")
         .total-card__head
           h2.total-card__title № #[span 888] #[b люкс]
           p.total-card__per-day #[b 9 990₽] в сутки
