--- a/src/components/input/input.pug
+++ b/src/components/input/input.pug
@@ -10,6 +10,7 @@ mixin input(options = {})
       : "input-group__label";
     let inputClass = "input-group__input";
     let splitButtonClass = "input-group__button-split";
+    let splitButtonType = options.splitButtonType ? options.splitButtonType  : "button";
 
     if (options.isButtonSplit) {
       inputClass += "  input-group__input--button-split";
@@ -60,7 +61,7 @@ mixin input(options = {})
         label(class=labelClass for=`${inputId}`)= options.labelName
       p.input-group__split
         input(id=`${inputId}` class=inputClass type=options.type name=options.name placeholder=options.placeholder)
-        button(id=`${splitId}` class=`${splitButtonClass}` type="button")
+        button(id=`${splitId}` class=`${splitButtonClass}` type=splitButtonType)
           img(src=`../../components/input/${options.iconSrc}`, alt="")
   else
     div(class=inputGroupClass)
